RESOLVED FIXED22285
ThreadingNone triggering isMainThread asserts
https://bugs.webkit.org/show_bug.cgi?id=22285
Summary ThreadingNone triggering isMainThread asserts
Kevin Ollivier
Reported 2008-11-15 13:26:09 PST
The stub Threading implementation (which doesn't implement threads) has isMainThread returning false, while in fact code will always be in the main thread with the stub implementation.
Attachments
Have isMainThread return true (1.06 KB, patch)
2008-11-15 13:27 PST, Kevin Ollivier
timothy: review+
Kevin Ollivier
Comment 1 2008-11-15 13:27:15 PST
Created attachment 25193 [details] Have isMainThread return true
Kevin Ollivier
Comment 2 2008-11-15 15:45:24 PST
Landed in r38437, thanks!
Note You need to log in before you can comment on or make changes to this bug.