Reviewed by Timothy Hatcher.

As ThreadingNone doesn't implement threads, isMainThread should return true, not false.

https://bugs.webkit.org/show_bug.cgi?id=22285


Canonical link: https://commits.webkit.org/30650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38437 268f45cc-cd09-0410-ab3c-d52691b4dbfc